<resources>
    <string name="app_name">Log.M</string>
    <string name="memo_save">Save</string>
    <string name="memo_cancel">Cancel</string>
    <string name="memo_create">Create</string>
    <string name="memo_modify">Edit</string>
    <string name="memo_delete">Delete Memo</string>
    <string name="memo_delete_all">Delete All Memos</string>
    <string name="memo_app_info">App Info</string>
    <string name="memo_fix">Pin and Unpin Memo</string>
    <string name="memo_widget">Show as Widget</string>
    <string name="todo_title">Title</string>
    <string name="todo_content">Details</string>
    <string name="todo_content_list_item">.</string>
    <string name="todo_time">Time</string>
    <string name="todo_alarm_10">Notify in 10 Minutes</string>
    <string name="no_memo">No Memos</string>
    <string name="sort_memo">Sort Memos</string>
    <string name="back">Go Back</string>
    <string name="check_fix">Do you want to pin this task to the top?</string>
    <string name="fab_content_desc">Create Task Memo</string>
    <string name="fixed_icon_description">Pin Task Memo</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="image_save_failed">Failed to save image</string>
    <string name="incomplete_input_message">Please enter the title and details</string>
    <string name="taking_pictures">Take pictures</string>
    <string name="select_a_picture_from_gallery">Select a picture from gallery</string>
    <string name="authorization_is_required">Authorization is required</string>
    <string name="remove_image">Remove</string>
    <string name="sunday">S</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="delete_all_memos_title">Delete All Memos</string>
    <string name="delete_all_memos_message">Are you sure you want to delete all memos? Deleted memos cannot be recovered.</string>
    <string name="delete_all_memos_confirm">Yes</string>
    <string name="delete_all_memos_cancel">No</string>
    <string name="sort_by_latest">Latest First</string>
    <string name="sort_alphabetically">Alphabetical Order</string>
    <string name="sort_by_creation_date">Creation Date</string>
    <string name="choose_a_screen">Choose a Screen</string>
    <string name="navigation_option_memo_edit">Write Memo</string>
    <string name="navigation_option_list_memo_edit">Write List Memo</string>
    <string name="fixed">Pinned</string>
    <string name="unfixed">Unpinned</string>
    <string name="toast_empty_fields">Please enter the title and content.</string>
    <string name="toast_saved">Saved</string>
    <string name="toast_delete_failed">Failed to delete the memo.</string>
    <string name="navigation_drawer_open" translatable="false">Open</string>
    <string name="navigation_drawer_close" translatable="false">Close</string>
    <string name="privacy_policy" translatable="false">Privacy Policy</string>
    <string name="terms_conditions" translatable="false">Terms and Conditions</string>
    <string name="privacy_policy_content" translatable="false"><big>Privacy Policy</big> \n\n

HuiJu Oh built the LOG.M app as a Free app. This SERVICE is provided by HuiJu Oh at no cost and is intended for use as is.\n\n
This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.\n\n
If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.\n\n
The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which are accessible at LOG.M unless otherwise defined in this Privacy Policy.\n\n
Information Collection and Use\n\n
For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information, including but not limited to An app that saves notes and to-do lists without network connectivity. The information that I request will be retained on your device and is not collected by me in any way.\n\n
The app does use third-party services that may collect information used to identify you.\n\n
Link to the privacy policy of third-party service providers used by the app\n\n
Google Play Services\n\n
Log Data\n\n
I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third-party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (\&quot;IP\&quot;) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.\n\n
Cookies\n\n
Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory.\n\n
This Service does not use these cookies explicitly. However, the app may use third-party code and libraries that use cookies to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.\n\n
Service Providers\n\n
I may employ third-party companies and individuals due to the following reasons:\n\n
To facilitate our Service;\n\n
To provide the Service on our behalf;\n\n
To perform Service-related services; or\n\n
To assist us in analyzing how our Service is used.\n\n
I want to inform users of this Service that these third parties have access to their Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.\n\n
Security\n\n
I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100\% secure and reliable, and I cannot guarantee its absolute security.\n\n
Links to Other Sites\n\n
This Service
may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.\n\n
Children’s Privacy\n\n
These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13 years of age. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do the necessary actions.\n\n
Changes to This Privacy Policy\n\n
I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page.\n\n
This policy is effective as of 2023-03-23\n\n
Contact Us\n\n
If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at noion0511@gmail.com.\n\n
This privacy policy page was created at privacypolicytemplate.net and modified/generated by App Privacy Policy Generator</string>
</resources>